--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
       <form method="post" action="/logout" style="display:inline;">
         <button type="submit">Log out</button>
       </form>
+      <p><a href="/dashboard">Go to dashboard</a></p>
     {% else %}
       <p>
         <a href="/signup">Sign up</a> · <a href="/login">Log in</a>
