--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,9 +1,6 @@
-<!doctype html>
-<html>
-  <head><meta charset="utf-8"><title>Dashboard</title></head>
-  <body>
-    <h1>Dashboard</h1>
-    <p>Welcome! You are user #{{ user_id }}.</p>
-    <p><a href="/">Back home</a></p>
-  </body>
-</html>
+{% extends "_base.html" %}
+
+{% block content %}
+  <h1>Dashboard</h1>
+  <p>Welcome! You are user #{{ user_id }}.</p>
+{% endblock %}
