--- a/templates/login.html
+++ b/templates/login.html
@@ -1,23 +1,19 @@
-<!doctype html>
-<html>
-  <head><meta charset="utf-8"><title>Log in</title></head>
-  <body>
-    <h1>Log in</h1>
+{% extends "_base.html" %}
 
-    {% if error %}
-      <p style="color:red;">{{ error }}</p>
-    {% endif %}
+{% block content %}
+  <h1>Log in</h1>
 
-    <form method="post" action="/login">
-      <label>Email</label><br>
-      <input name="email" type="email" required><br><br>
+  {% if error %}
+    <p style="color:red;">{{ error }}</p>
+  {% endif %}
 
-      <label>Password</label><br>
-      <input name="password" type="password" required><br><br>
+  <form method="post" action="/login">
+    <label>Email</label><br>
+    <input name="email" type="email" required><br><br>
 
-      <button type="submit">Log in</button>
-    </form>
+    <label>Password</label><br>
+    <input name="password" type="password" required><br><br>
 
-    <p><a href="/signup">Create an account</a></p>
-  </body>
-</html>
+    <button type="submit">Log in</button>
+  </form>
+{% endblock %}
