--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,21 +1,19 @@
-<!doctype html>
-<html>
-  <head><meta charset="utf-8"><title>Sign up</title></head>
-  <body>
-    <h1>Create account</h1>
+{% extends "_base.html" %}
 
-    {% if error %}
-      <p style="color:red;">{{ error }}</p>
-    {% endif %}
+{% block content %}
+  <h1>Create account</h1>
 
-    <form method="post" action="/signup">
-      <label>Email</label><br>
-      <input name="email" type="email" required><br><br>
+  {% if error %}
+    <p style="color:red;">{{ error }}</p>
+  {% endif %}
 
-      <label>Password</label><br>
-      <input name="password" type="password" minlength="8" required><br><br>
+  <form method="post" action="/signup">
+    <label>Email</label><br>
+    <input name="email" type="email" required><br><br>
 
-      <button type="submit">Create account</button>
-    </form>
-  </body>
-</html>
+    <label>Password</label><br>
+    <input name="password" type="password" minlength="8" required><br><br>
+
+    <button type="submit">Create account</button>
+  </form>
+{% endblock %}
