--- a/templates/_base.html
+++ b/templates/_base.html
@@ -26,6 +26,7 @@
 
         <div class="text-sm">
           {% if user_id %}
+            <a href="/categories" class="hover:text-gray-900">Categories</a>
             <form method="post" action="/logout" class="inline">
               <button type="submit" class="rounded-md border px-3 py-1.5 hover:bg-gray-50">
                 Log out
