--- a/templates/_base.html
+++ b/templates/_base.html
@@ -17,6 +17,7 @@
           <a href="/" class="hover:underline">Home</a>
           <a href="/categories" class="hover:underline">Categories</a>
           <a href="/budget" class="hover:underline">Budget</a>
+          <a href="/transaction" class="...">Transactions</a>
         </nav>
       </div>
     </header>
